src/objects/fferpcore__ErpInternalEvent__e.object
<CustomObject>
    <description>Data used by internal operations in Foundations.</description>
    <fields>
        <fullName>fferpcore__CcMessageType__c</fullName>
        <description>The destination message type to store the event message data. The message type must contain the &quot;Logging.&quot; prefix.</description>
        <label>Copy to Message Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Component__c</fullName>
        <label>Component</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageData__c</fullName>
        <label>Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Severity__c</fullName>
        <label>Severity</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShortMessage__c</fullName>
        <label>Short Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FDN Internal Event</label>
    <pluralLabel>FDN Internal Events</pluralLabel>
</CustomObject>